trustfall_core/test_data/tests/parse_errors/typo_in_filter_value_argument_name.parse-error.ron
Err(UnrecognizedDirectiveArgument("@filter", "values", Pos(
  line: 4,
  column: 40,
)))
